Fix 'Door Open' not centered

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -14,8 +14,7 @@ body {
   border-width: 3px;
 }
 .button1:hover{
-  background-color: #caac91;
-  color: #180205;
+  color: whitesmoke;
 }
 
 .button1:focus {
@@ -63,6 +62,7 @@ hr{
 #direction{
   font-size: 20vw;
   align-self: center;
+  text-align: center;
   margin: 0;
   padding: 0;
 }
@@ -74,4 +74,5 @@ hr{
   font-size: 20px;
   text-align: center;
   color:#eb9839;
+  margin: 0;
 }
